improving the method buildSimilarWords